Restored frontend files